# sampl

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: ast.h  parser.h
lib/include/ast/: expr.h  statement.h
lib/include/parser/: basic.h  expr.h  extended.h  statement.h  util.h
lib/include/parser/combinator/: basic.h  util.h
lib/include/parser/rdd/: basic.h
lib/src/: ast.cpp  parser.cpp
lib/src/ast/: expr.cpp
lib/src/parser/: basic.cpp  expr.cpp  extended.cpp  statement.cpp  util.cpp
lib/src/parser/combinator/: basic.cpp
lib/src/parser/rdd/: basic.cpp
tests/: CMakeLists.txt  main.cpp
